--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title>Axis</title>
+
+    <link rel="stylesheet" href="axis.css" type="text/css" />
 </head>
 <body>
 
