--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             },
             {
                 x: "Sat 09 Feb 2013 05:01:00 GMT",
-                y: 8
+                y: 7
             },
             {
                 x: "Sat 09 Feb 2013 05:02:00 GMT",
@@ -30,13 +30,32 @@
             },
             {
                 x: "Sat 09 Feb 2013 05:07:00 GMT",
-                y: 3
+                y: 4
+            }
+        ];
+
+        var data = [
+            {
+                x: 1,
+                y: 2
+            },
+            {
+                x: 2,
+                y: 6
+            },
+            {
+                x: 3,
+                y: 5
+            },
+            {
+                x: 4,
+                y: 4
             }
         ];
 
         var lineChart = axis.lineChart({
             selector   : '#graph',
-            timeseries : true,
+            //timeseries : true,
             data       : data
         });
 
